--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "travel-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://isefero.github.io/Espace-travel/",
   "dependencies": {
     "@chakra-ui/react": "^2.5.4",
     "@emotion/react": "^11.10.6",
@@ -14,6 +15,7 @@
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
     "framer-motion": "^10.10.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -25,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
